--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -6,65 +6,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="https://getbootstrap.com/docs/4.0/assets/img/favicons/favicon.ico">
 
-  <!-- Bootstrap CSS -->
+  <title>Student portal of the Stuttgart Media University</title>
+
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="../stylesheets/style.scss">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="icon" href="https://getbootstrap.com/docs/4.0/assets/img/favicons/favicon.ico">
 
-  <title>Student portal of the Stuttgart Media University</title>
+  <!-- SCRIPTS -->
+
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
+  <!-- Canvas.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0" defer></script>
+  <!-- Bootstrap -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+          integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+          crossorigin="anonymous" defer></script>
+  <!-- My Scripts -->
+  <script src="../index.js" defer></script>
 </head>
+
+<!-- BODY -->
 <body>
 <!-- Header -->
-<header>
-  <!-- Fixed navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <a class="navbar-brand" href="#">HdM Student Portal</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<header id="nav-placeholder"></header>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <!-- Dashboard -->
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Dashboard <span class="sr-only">(current)</span></a>
-        </li>
-        <!-- Study Progress -->
-        <li class="nav-item active">
-          <a class="nav-link" href="/study-progress">Study Progress <span class="sr-only">(current)</span></a>
-        </li>
-        <!-- Exams -->
-        <li class="nav-item active">
-          <a class="nav-link" href="/exams">Exams <span class="sr-only">(current)</span></a>
-        </li>
-        <!-- Semester Fees -->
-        <li class="nav-item active">
-          <a class="nav-link" href="/exams">Semester Fees <span class="sr-only">(current)</span></a>
-        </li>
-        <!-- Certificates & Forms -->
-        <li class="nav-item active">
-          <a class="nav-link" href="/certificates-and-forms">Certificates & Forms <span
-                  class="sr-only">(current)</span></a>
-        </li>
-        <!-- Profile -->
-        <li class="nav-item active">
-          <a class="nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
-        </li>
-        <!-- FAQ -->
-        <li class="nav-item active">
-          <a class="nav-link" href="/faq">FAQ <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
-
-<!-- Content -->
+<!-- Main -->
 <main role="main" class="container">
-  <h1 class="mt-5">FAQ</h1>
+  <h1 class="mt-5">Dashboard</h1>
   <p>Your current studies progress at the Stuttgart Media University is a follows:</p>
   <h2>Studies progress: 73%</h2>
   <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
@@ -186,16 +158,7 @@
     <a href="#">Privacy Policy</a>
   </div>
 </footer>
+
 </body>
 
 </html>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
