Fixed minor styling issues and finished setting up the project

--- a/public/nav.html
+++ b/public/nav.html
@@ -3,7 +3,8 @@
         <img src="assets/HdM_Logo.png" width="30" class="d-inline-block align-top" alt="">
         <span>Study Administration Portal</span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    <button class="navbar-toggler border-none" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,32 +12,32 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <!-- Dashboard -->
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Dashboard <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link" href="/dashboard">Dashboard <span class="sr-only">(current)</span></a>
             </li>
             <!-- Study Progress -->
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/study-progress">Study Progress <span class="sr-only">(current)</span></a>
             </li>
             <!-- Exams -->
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/exams">Exams <span class="sr-only">(current)</span></a>
             </li>
             <!-- Semester Fees -->
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/semester-fees">Semester Fees <span class="sr-only">(current)</span></a>
             </li>
             <!-- Certificates & Forms -->
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/certificates-and-forms">Certificates & Forms <span
                         class="sr-only">(current)</span></a>
             </li>
             <!-- Profile -->
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
             </li>
             <!-- FAQ -->
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/faq">FAQ <span class="sr-only">(current)</span></a>
             </li>
         </ul>
