--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
 
-  <title>Student portal of the Stuttgart Media University</title>
+  <title>Login</title>
+
+  <!-- Required meta tags -->
+  <meta name="description" content="On this page you can administer your studies at the Stuttgart Media University."/>
+  <meta name="keyword" content="study administration portal"/>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- for correct scaling at the first time on mobile devices -->
+  <meta name="author" content="Johannes Ströbele"/>
+  <meta name="language" content="English">
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="../stylesheets/style.scss">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="icon" href="https://getbootstrap.com/docs/4.0/assets/img/favicons/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="/scripts/bootstrap/dist/css/bootstrap.css">
 
   <!-- SCRIPTS -->
-
-  <!-- jQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
-  <!-- Canvas.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0" defer></script>
-  <!-- Bootstrap -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-          integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-          crossorigin="anonymous" defer></script>
-  <!-- My Scripts -->
-  <script src="../index.js" defer></script>
+  <script src="/scripts/jquery/dist/jquery.js"></script>
+  <script src="/scripts/popper.js/dist/umd/popper.js"></script>
+  <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../index.js"></script>
 </head>
 
 <!-- BODY -->
@@ -36,7 +31,7 @@
 
 <!-- Main -->
 <main role="main" class="container">
-  <h1 class="mt-5">Dashboard</h1>
+  <h1 class="mt-5">FAQ</h1>
   <p>Your current studies progress at the Stuttgart Media University is a follows:</p>
   <h2>Studies progress: 73%</h2>
   <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
