--- a/public/index.html
+++ b/public/index.html
@@ -1,183 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Student portal of the Stuttgart Media University</title>
+    <title>Login</title>
+
+    <!-- Required meta tags -->
+    <meta name="description" content="On this page you can administer your studies at the Stuttgart Media University."/>
+    <meta name="keyword" content="study administration portal"/>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- for correct scaling at the first time on mobile devices -->
+    <meta name="author" content="Johannes Ströbele"/>
+    <meta name="language" content="English">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="stylesheets/style.scss">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="icon" href="https://getbootstrap.com/docs/4.0/assets/img/favicons/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="/scripts/bootstrap/dist/css/bootstrap.css">
 
     <!-- SCRIPTS -->
-
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
-    <!-- Canvas.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0" defer></script>
-    <!-- Bootstrap -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-            crossorigin="anonymous" defer></script>
-    <!-- My Scripts -->
-    <script src="index.js" defer></script>
-    <script src="visualizations.js" defer></script>
+    <script src="/scripts/jquery/dist/jquery.js"></script>
+    <script src="/scripts/popper.js/dist/umd/popper.js"></script>
+    <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <!-- BODY -->
 <body>
+
 <!-- Header -->
 <header id="nav-placeholder"></header>
 
-<!-- Main -->
+
+<!-- Begin page content -->
 <main role="main" class="container">
-    <h1 class="mt-5">Hello Julia</h1>
-    <p>Your current studies progress at the Stuttgart Media University is a follows:</p>
-    <h2>Studies progress: 73%</h2>
-
-    <canvas id="myChart"></canvas>
-
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-        tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-        Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <ul>
-        <li>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in,
-            diam.
-            Sed arcu. Cras consequat.
-        </li>
-        <li>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat.
-            Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.
-        </li>
-        <li>Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique
-            cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.
-        </li>
-        <li>Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate,
-            nunc.
-        </li>
-    </ul>
-    <h2>Notifications</h2>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-        tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-        Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-        tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-        Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-        tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-        Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-        tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-        Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-        tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-        Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-        tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-        Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <h2>Exams</h2>
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Register</th>
-            <th>Course</th>
-            <th>Deadline</th>
-            <th>Course ID</th>
-            <th>Degree</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
-                </div>
-            </td>
-            <td>App Design</td>
-            <td>20.07.2020</td>
-            <td>53423</td>
-            <td>ID7</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck2" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
-                </div>
-            </td>
-            <td>Mobile Media</td>
-            <td>20.07.2020</td>
-            <td>53423</td>
-            <td>ID7</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck3" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
-                </div>
-            </td>
-            <td>App Design</td>
-            <td>20.07.2020</td>
-            <td>53423</td>
-            <td>ID7</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck4" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
-                </div>
-            </td>
-            <td>Mobile Media</td>
-            <td>20.07.2020</td>
-            <td>53423</td>
-            <td>ID7</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck5" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
-                </div>
-            </td>
-            <td>App Design</td>
-            <td>20.07.2020</td>
-            <td>53423</td>
-            <td>ID7</td>
-        </tr>
-        </tbody>
-    </table>
+    <h1 class="mt-5">Sticky footer</h1>
+    <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS.</p>
 </main>
 
-<!-- Footer -->
-<footer class="footer bg-dark">
-    <div class="container d-flex justify-content-between">
-        <a href="#">Legal Disclosure</a>
-        <a href="#">Privacy Policy</a>
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">Place sticky footer content here.</span>
     </div>
 </footer>
 
-</body>
 
+</body>
 </html>
