Implemented working login, but fix needed for real form and footer on all pages

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -101,8 +101,8 @@
         <tr>
             <td>
                 <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck2" checked>
                     <label class="custom-control-label" for="customCheck1"></label>
+                    <input type="checkbox" class="custom-control-input" id="customCheck2" checked>
                 </div>
             </td>
             <td>Mobile Media</td>
@@ -113,8 +113,8 @@
         <tr>
             <td>
                 <div class="custom-control custom-checkbox">
+                    <label class="custom-control-label" for="customCheck3"></label>
                     <input type="checkbox" class="custom-control-input" id="customCheck3" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
                 </div>
             </td>
             <td>App Design</td>
@@ -125,8 +125,8 @@
         <tr>
             <td>
                 <div class="custom-control custom-checkbox">
+                    <label class="custom-control-label" for="customCheck4"></label>
                     <input type="checkbox" class="custom-control-input" id="customCheck4" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
                 </div>
             </td>
             <td>Mobile Media</td>
@@ -151,7 +151,7 @@
 </main>
 
 <!-- Footer -->
-<footer class="footer bg-dark">
+<footer class="bg-dark">
     <div class="container d-flex justify-content-between">
         <a href="#">Legal Disclosure</a>
         <a href="#">Privacy Policy</a>
