--- a/public/index.html
+++ b/public/index.html
@@ -25,24 +25,59 @@
 </head>
 
 <!-- BODY -->
-<body>
+<body class="d-flex flex-column min-vh-100 ">
 
 <!-- Header -->
 <header id="nav-placeholder"></header>
 
+<form action="#">
+    <label for="email">Email</label>
+    <input id="email" type="email">
+    <label for="password">Password</label>
+    <input id="password" type="text">
+    <button onclick="myFunction()">Submit</button>
+</form>
+
 
 <!-- Begin page content -->
-<main role="main" class="container">
-    <h1 class="mt-5">Sticky footer</h1>
-    <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS.</p>
+<main role="main" class="container main-login">
+    <form>
+        <div class="text-center mb-4">
+            <h1 class="h3 mb-3 font-weight-normal">Welcome Lisa!</h1>
+            <p>This is the study administration portal of the Stuttgart Media University for lecturers, students, and
+                employees.</p>
+            <p>Please enter your credentials as follows to login to the portal.</p>
+        </div>
+
+        <div>
+            <label for="inputEmail">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required=""
+                   autofocus="">
+        </div>
+
+        <div>
+            <label for="inputPassword">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        </div>
+
+        <!-- TODO fix login-->
+        <button class="button  btn-lg btn-block" type="submit" onclick="location.href='/dashboard';">
+            Sign in
+        </button>
+        <div class="mb-3">
+            <label>
+                <input type="checkbox" value="remember-me"> Remember me
+            </label>
+        </div>
+
+        <a class="mt-5 mb-3" href="#">Forgot your username or password?</a>
+    </form>
 </main>
 
-<footer class="footer">
-    <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
-    </div>
+<footer class="d-flex justify-content-around bg-light">
+    <a href="#">Legal Disclosure</a>
+    <span>Copyright © 2020 Stuttgart Media University</span>
+    <a href="#">Privacy Policy</a>
 </footer>
-
-
 </body>
 </html>
