--- a/public/nav.html
+++ b/public/nav.html
@@ -1,7 +1,7 @@
 <nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <a class="navbar-brand" href="/">
-        <img src="assets/HdM_Logo.png" width="30" class="d-inline-block align-top" alt="">
-        <span>Study Administration Portal</span>
+        <img src="assets/HdM_Logo_NoText.png" width="42" class="logo-picture d-inline-block align-top" alt="">
+        <span class="logo-text">Study Administration Portal</span>
     </a>
     <button class="navbar-toggler border-none" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"
@@ -31,14 +31,6 @@
             <li class="nav-item">
                 <a class="nav-link" href="/certificates-and-forms">Certificates & Forms <span
                         class="sr-only">(current)</span></a>
-            </li>
-            <!-- Profile -->
-            <li class="nav-item">
-                <a class="nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
-            </li>
-            <!-- FAQ -->
-            <li class="nav-item">
-                <a class="nav-link" href="/faq">FAQ <span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
