--- a/public/nav.html
+++ b/public/nav.html
@@ -1,4 +1,4 @@
-<nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+<nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-light bg-light sticky-top justify-content-between">
     <a class="navbar-brand" href="/">
         <img src="assets/HdM_Logo_NoText.png" width="42" class="logo-picture d-inline-block align-top" alt="">
         <span class="logo-text">Study Administration Portal</span>
@@ -13,25 +13,29 @@
         <ul class="navbar-nav mr-auto">
             <!-- Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/dashboard">Dashboard<span class="sr-only">(current)</span></a>
             </li>
             <!-- Study Progress -->
             <li class="nav-item">
-                <a class="nav-link" href="/study-progress">Study Progress <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/study-progress">Study Progress<span class="sr-only">(current)</span></a>
             </li>
             <!-- Exams -->
             <li class="nav-item">
-                <a class="nav-link" href="/exams">Exams <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/exams">Exams<span class="sr-only">(current)</span></a>
             </li>
-            <!-- Semester Fees -->
+            <!-- Fees -->
             <li class="nav-item">
-                <a class="nav-link" href="/semester-fees">Semester Fees <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/fees">Fees<span class="sr-only">(current)</span></a>
             </li>
             <!-- Certificates & Forms -->
             <li class="nav-item">
-                <a class="nav-link" href="/certificates-and-forms">Certificates & Forms <span
-                        class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/certificates-and-forms">Certificates & Forms<span class="sr-only">(current)</span></a>
+            </li>
+            <!-- Profile -->
+            <li class="nav-item" id="nav-profile-desktop">
+                <a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a>
             </li>
         </ul>
+        <a class="nav-profile-link"><img id="nav-profile-mobile" src="assets/Lisa_Avatar.png" alt="Profile image"></a>
     </div>
 </nav>
