--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -17,13 +17,6 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
     <link rel="stylesheet" type="text/css" href="/scripts/bootstrap/dist/css/bootstrap.css">
 
-    <!-- SCRIPTS -->
-    <script src="/scripts/jquery/dist/jquery.js"></script>
-    <!-- uwd version necessary https://stackoverflow.com/a/48498096/11823182 -->
-    <script src="/scripts/popper.js/dist/umd/popper.js"></script>
-    <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/scripts/chart.js/dist/Chart.js"></script>
-    <script src="../index.js"></script>
 </head>
 
 <!-- BODY -->
@@ -32,132 +25,87 @@
 <header id="nav-placeholder"></header>
 
 <!-- Main -->
-<main role="main" class="container" style="height:80px;">
-    <h1 class="mt-5">Dashboard</h1>
+<main role="main" class="container">
+    <h1 class="mt-5">Hello Lisa!</h1>
+    <p>Here, you get a quick overview of your study progress for Information Design</p>
+    <h2>Your Study Progress: 73%</h2>
+    <p>You have earned 182 out of 210 ECTS until now.
+        Further, you have 3 more semesters remaining for graduating.
+        Your progress in the 4 study areas are as follows:</p>
+    <canvas id="barChartStudyProgress"></canvas>
 
-    <canvas id="barStudyProgress"></canvas>
-    <p>Your current studies progress at the Stuttgart Media University is a follows:</p>
-    <h2>Studies progress: 73%</h2>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <ul>
-        <li>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam.
-            Sed arcu. Cras consequat.
-        </li>
-        <li>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat.
-            Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.
-        </li>
-        <li>Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique
-            cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.
-        </li>
-        <li>Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate,
-            nunc.
-        </li>
-    </ul>
     <h2>Notifications</h2>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <h2>Exams</h2>
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Register</th>
-            <th>Course</th>
-            <th>Deadline</th>
-            <th>Course ID</th>
-            <th>Degree</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
-                </div>
-            </td>
-            <td>App Design</td>
-            <td>20.07.2020</td>
-            <td>53423</td>
-            <td>ID7</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="custom-control custom-checkbox">
-                    <label class="custom-control-label" for="customCheck1"></label>
-                    <input type="checkbox" class="custom-control-input" id="customCheck2" checked>
-                </div>
-            </td>
-            <td>Mobile Media</td>
-            <td>20.07.2020</td>
-            <td>53423</td>
-            <td>ID7</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="custom-control custom-checkbox">
-                    <label class="custom-control-label" for="customCheck3"></label>
-                    <input type="checkbox" class="custom-control-input" id="customCheck3" checked>
-                </div>
-            </td>
-            <td>App Design</td>
-            <td>20.07.2020</td>
-            <td>53423</td>
-            <td>ID7</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="custom-control custom-checkbox">
-                    <label class="custom-control-label" for="customCheck4"></label>
-                    <input type="checkbox" class="custom-control-input" id="customCheck4" checked>
-                </div>
-            </td>
-            <td>Mobile Media</td>
-            <td>20.07.2020</td>
-            <td>53423</td>
-            <td>ID7</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck5" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
-                </div>
-            </td>
-            <td>App Design</td>
-            <td>20.07.2020</td>
-            <td>53423</td>
-            <td>ID7</td>
-        </tr>
-        </tbody>
-    </table>
+    <p>This list shows important actions that you need to take, events that will take place shortly, and other essential alerts</p>
+    <div class="list-group">
+        <div class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Exam registration</h5>
+                <small class="list-time">2 hour ago</small>
+            </div>
+            <p class="mb-1">Register your exams please. You have 7 more days left before the registration period ends for this summer semester 2020. Click on the button to go to the respective page for registration.</p>
+            <div class="d-flex w-100 align-items-center justify-content-between">
+                <small>Examination Office</small>
+                <button class="button-small" value="Send" type="submit" onclick="return linkToExams()">Register Exams</button>
+            </div>
+        </div>
+        <div class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Lorem Ipsum</h5>
+                <small class="list-time">X days ago</small>
+            </div>
+            <p class="mb-1">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
+            <div class="d-flex w-100 align-items-center justify-content-between">
+                <small>Aliquam tincidunt mauris</small>
+                <button class="button-small" value="Send" type="submit" onclick="return linkToExams()">Example Button</button>
+            </div>
+        </div>
+        <div class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Lorem Ipsum</h5>
+                <small class="list-time">X days ago</small>
+            </div>
+            <p class="mb-1">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
+            <div class="d-flex w-100 align-items-center justify-content-between">
+                <small>Aliquam tincidunt mauris</small>
+                <button class="button-small" value="Send" type="submit" onclick="return linkToExams()">Example Button</button>
+            </div>
+        </div>
+        <div class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Lorem Ipsum</h5>
+                <small class="list-time">X days ago</small>
+            </div>
+            <p class="mb-1">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
+            <div class="d-flex w-100 align-items-center justify-content-between">
+                <small>Aliquam tincidunt mauris</small>
+                <button class="button-small" value="Send" type="submit" onclick="return linkToExams()">Example Button</button>
+            </div>
+        </div>
+        <div class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">Lorem Ipsum</h5>
+                <small class="list-time">X days ago</small>
+            </div>
+            <p class="mb-1">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
+            <div class="d-flex w-100 align-items-center justify-content-between">
+                <small>Aliquam tincidunt mauris</small>
+                <button class="button-small" value="Send" type="submit" onclick="return linkToExams()">Example Button</button>
+            </div>
+        </div>
+    </div>
 </main>
 
 <!-- Footer -->
-<footer class="bg-dark">
-    <div class="container d-flex justify-content-between">
-        <a href="#">Legal Disclosure</a>
-        <a href="#">Privacy Policy</a>
-    </div>
-</footer>
-<script src="../visualizations.js"></script>
+<div id="footer-placeholder"></div>
+
+<!-- SCRIPTS -->
+<script src="/scripts/jquery/dist/jquery.js"></script>
+<!-- uwd version necessary https://stackoverflow.com/a/48498096/11823182 -->
+<script src="/scripts/popper.js/dist/umd/popper.js"></script>
+<script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/scripts/chart.js/dist/Chart.js"></script>
+<script src="../index.js"></script>
+<script src="../javascripts/dashboard-charts.js"></script>
 </body>
 
 </html>
