--- a/public/pages/exams.html
+++ b/public/pages/exams.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>Login</title>
+    <title>Exams</title>
 
     <!-- Required meta tags -->
     <meta name="description" content="On this page you can administer your studies at the Stuttgart Media University."/>
@@ -17,11 +17,6 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
     <link rel="stylesheet" type="text/css" href="/scripts/bootstrap/dist/css/bootstrap.css">
 
-    <!-- SCRIPTS -->
-    <script src="/scripts/jquery/dist/jquery.js"></script>
-    <script src="/scripts/popper.js/dist/umd/popper.js"></script>
-    <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../index.js"></script>
 </head>
 
 <!-- BODY -->
@@ -32,45 +27,10 @@
 <!-- Main -->
 <main role="main" class="container">
     <h1 class="mt-5">Exams</h1>
-    <p>Your current studies progress at the Stuttgart Media University is a follows:</p>
-    <h2>Studies progress: 73%</h2>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <ul>
-        <li>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam.
-            Sed arcu. Cras consequat.
-        </li>
-        <li>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat.
-            Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.
-        </li>
-        <li>Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique
-            cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.
-        </li>
-        <li>Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate,
-            nunc.
-        </li>
-    </ul>
-    <h2>Notifications</h2>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-        quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-        ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+
     <h2>Exams</h2>
+    <canvas id="barChartStudyProgress"></canvas>
+    <canvas id="pieChartStudyProgress"></canvas>
     <table class="table">
         <thead>
         <tr>
@@ -97,8 +57,8 @@
         <tr>
             <td>
                 <div class="custom-control custom-checkbox">
+                    <label class="custom-control-label" for="customCheck2"></label>
                     <input type="checkbox" class="custom-control-input" id="customCheck2" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
                 </div>
             </td>
             <td>Mobile Media</td>
@@ -109,8 +69,8 @@
         <tr>
             <td>
                 <div class="custom-control custom-checkbox">
+                    <label class="custom-control-label" for="customCheck3"></label>
                     <input type="checkbox" class="custom-control-input" id="customCheck3" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
                 </div>
             </td>
             <td>App Design</td>
@@ -121,8 +81,8 @@
         <tr>
             <td>
                 <div class="custom-control custom-checkbox">
+                    <label class="custom-control-label" for="customCheck4"></label>
                     <input type="checkbox" class="custom-control-input" id="customCheck4" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
                 </div>
             </td>
             <td>Mobile Media</td>
@@ -134,7 +94,7 @@
             <td>
                 <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="customCheck5" checked>
-                    <label class="custom-control-label" for="customCheck1"></label>
+                    <label class="custom-control-label" for="customCheck5"></label>
                 </div>
             </td>
             <td>App Design</td>
@@ -147,13 +107,16 @@
 </main>
 
 <!-- Footer -->
-<footer class="footer bg-dark">
-    <div class="container d-flex justify-content-between">
-        <a href="#">Legal Disclosure</a>
-        <a href="#">Privacy Policy</a>
-    </div>
-</footer>
+<div id="footer-placeholder"></div>
 
+<!-- SCRIPTS -->
+<script src="/scripts/jquery/dist/jquery.js"></script>
+<!-- uwd version necessary https://stackoverflow.com/a/48498096/11823182 -->
+<script src="/scripts/popper.js/dist/umd/popper.js"></script>
+<script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/scripts/chart.js/dist/Chart.js"></script>
+<script src="../index.js"></script>
+<script src="../javascripts/exams-charts.js"></script>
 </body>
 
 </html>
