--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -105,7 +105,7 @@
 <script src="/scripts/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/scripts/chart.js/dist/Chart.js"></script>
 <script src="../index.js"></script>
-<script src="../javascripts/dashboard-charts.js"></script>
+<script src="../javascripts/dashboard.js"></script>
 </body>
 
 </html>
