--- a/public/pages/study-progress.html
+++ b/public/pages/study-progress.html
@@ -27,24 +27,107 @@
 <!-- Main -->
 <main role="main" class="container">
   <h1 class="mt-5">Study Progress</h1>
+  <p>This list shows all courses that you passed during your Information Design degree.</p>
 
-  <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-
-  <h2>Header Level 2</h2>
-
-  <ol>
-    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-    <li>Aliquam tincidunt mauris eu risus.</li>
-  </ol>
-
-  <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
-
-  <h3>Header Level 3</h3>
-
-  <ul>
-    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-    <li>Aliquam tincidunt mauris eu risus.</li>
-  </ul>
+  <div class="table-responsive">
+    <table class="table">
+      <thead class="thead-dark">
+      <tr>
+        <th>Name</th>
+        <th>Course ID</th>
+        <th>ECTS</th>
+        <th>Grade</th>
+        <th>Area</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      <tr>
+        <td>App Design</td>
+        <td>53423</td>
+        <td>5</td>
+        <td>1.7</td>
+        <td>Project</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 
 </main>
 
